--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 04:05:06 2018</p>
+         Last Run: Wed Nov 28 05:05:06 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
                         <td>W</td>
-                        <td>38</td>
+                        <td>39</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -49,7 +49,7 @@
                         <td>81</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WSW</td>
                         <td>29</td>
                      </tr>
                      <tr>
@@ -58,7 +58,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>85</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
+                 "79",
                  "81",
-                 "85"
+                 "86"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "38",
+                 "39",
                  "29",
                  "26"
                ]
@@ -224,9 +224,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 04:05:06 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
+         Last Run: Wed Nov 28 05:05:07 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -244,40 +244,40 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>01:00 PM</td>
+                        <td>12:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-7</td>
-                        <td>48</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>36</td>
                         <td>83</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>94</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>92</td>
+                     </tr>
+                     <tr>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>24</td>
+                        <td>80</td>
+                        <td>0</td>
+                        <td>6</td>
+                        <td>NNE</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-6</td>
-                        <td>40</td>
-                        <td>80</td>
+                        <td>-5</td>
+                        <td>-8</td>
+                        <td>35</td>
+                        <td>76</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>N</td>
-                        <td>94</td>
-                     </tr>
-                     <tr>
-                        <td>03:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>40</td>
-                        <td>79</td>
-                        <td>0</td>
-                        <td>10</td>
+                        <td>6</td>
                         <td>NNE</td>
-                        <td>94</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -292,9 +292,9 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator3").getContext("2d");
                   var data ={
            "labels":[
+             "12:00 PM",
              "01:00 PM",
-             "02:00 PM",
-             "03:00 PM"
+             "02:00 PM"
            ],
            "datasets":[
              {
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-7",
-                 "-6",
-                 "-7"
+                 "-8",
+                 "-8",
+                 "-8"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-4",
-                 "-3",
-                 "-3"
+                 "-5",
+                 "-5",
+                 "-5"
                ]
              }
            ]
@@ -362,221 +362,6 @@
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
                   var ctx = document.getElementById("chartHTMLReportGenerator4").getContext("2d");
-                  var data ={
-           "labels":[
-             "01:00 PM",
-             "02:00 PM",
-             "03:00 PM"
-           ],
-           "datasets":[
-             {
-               "label":"precipProbability",
-               "borderColor":"rgba(0,0,255,1)",
-               "borderWidth":2,
-               "backgroundColor":"rgba(0,0,255,0.5)",
-               "data":[
-                 "48",
-                 "40",
-                 "40"
-               ]
-             },
-             {
-               "label":"humidity",
-               "borderColor":"rgba(40,177,255,1)",
-               "borderWidth":2,
-               "backgroundColor":"rgba(40,177,255,0.5)",
-               "data":[
-                 "83",
-                 "80",
-                 "79"
-               ]
-             },
-             {
-               "label":"cloudCover",
-               "borderColor":"rgba(233,37,255,1)",
-               "borderWidth":2,
-               "backgroundColor":"rgba(233,37,255,0.5)",
-               "data":[
-                 "94",
-                 "94",
-                 "94"
-               ]
-             }
-           ]
-         };
-                  var options = {
-                     legend: {
-                         position: 'right'
-                     },
-                     scales: {
-                         xAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Date/Time', display: true},
-                             ticks: {
-                                 autoSkip: false
-                             }
-                         }],
-                         yAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Percentage (%)', display: true},
-                             ticks: {
-                                 beginAtZero: true
-                             }
-                         }]
-                     },
-                     tooltips: {
-                         mode: 'index'
-                     }
-                  };
-                  var MyNewChart = new Chart(ctx, {
-                     type: 'bar',
-                     data: data,
-                     options: options
-                  });
-               </script>
-         <hr style="border-width:5px ">
-      </div>
-      <div style="padding:10px;border: 1px none black">
-         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
-         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 04:05:06 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
-               <table class="table table-striped">
-                  <thead>
-                     <tr>
-                        <th>Forecast Time</th>
-                        <th>Summary</th>
-                        <th>Temperture (°C)</th>
-                        <th>Feels Like (°C)</th>
-                        <th>POP (%)</th>
-                        <th>Humidity (%)</th>
-                        <th>UV</th>
-                        <th>Wind (km/hr)</th>
-                        <th>Wind Dir.</th>
-                        <th>Cloud Cover (%)</th>
-                     </tr>
-                  </thead>
-                  <tbody>
-                     <tr>
-                        <td>12:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-6</td>
-                        <td>-9</td>
-                        <td>36</td>
-                        <td>83</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>92</td>
-                     </tr>
-                     <tr>
-                        <td>01:00 PM</td>
-                        <td>Overcast</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>24</td>
-                        <td>80</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>92</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Snow Showers</td>
-                        <td>-5</td>
-                        <td>-8</td>
-                        <td>35</td>
-                        <td>76</td>
-                        <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>92</td>
-                     </tr>
-                  </tbody>
-               </table>
-               </style>
-               <div class="container-fluid">
-               	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
-               	</div>
-               </div>
-               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-               <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
-                  var data ={
-           "labels":[
-             "12:00 PM",
-             "01:00 PM",
-             "02:00 PM"
-           ],
-           "datasets":[
-             {
-               "label":"apparentTemperature",
-               "borderColor":"rgba(92,0,141,1)",
-               "borderWidth":2,
-               "pointColor":"rgba(92,0,141,1)",
-               "backgroundColor":"rgba(92,0,141,0)",
-               "data":[
-                 "-9",
-                 "-8",
-                 "-8"
-               ]
-             },
-             {
-               "label":"temperature",
-               "borderColor":"rgba(252,49,18,1)",
-               "borderWidth":2,
-               "pointColor":"rgba(252,49,18,1)",
-               "backgroundColor":"rgba(252,49,18,0)",
-               "data":[
-                 "-6",
-                 "-5",
-                 "-5"
-               ]
-             }
-           ]
-         };
-                  var options = {
-                     legend: {
-                         position: 'right'
-                     },
-                     scales: {
-                         xAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Date/Time', display: true},
-                             ticks: {
-                                 autoSkip: false
-                             }
-                         }],
-                         yAxes: [{
-                             display: true,
-                             scaleLabel: {labelString: 'Temp (C)', display: true},
-                             ticks: {
-                                 beginAtZero: false
-                             }
-                         }]
-                     },
-                     tooltips: {
-                         mode: 'index'
-                     }
-                  };
-                  var MyNewChart = new Chart(ctx, {
-                     type: 'line',
-                     data: data,
-                     options: options
-                  });
-               </script>
-               </style>
-               <div class="container-fluid">
-               	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
-               	</div>
-               </div>
-               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
-               <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
                   var data ={
            "labels":[
              "12:00 PM",
@@ -654,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 04:05:06 2018</p>
+         Last Run: Wed Nov 28 05:05:07 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +464,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>6</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -714,12 +499,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator7"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator7").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
                   var data ={
            "labels":[
              "09:00 PM",
@@ -786,12 +571,12 @@
                </style>
                <div class="container-fluid">
                	<div class="row">
-               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator8"></canvas></div>
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas></div>
                	</div>
                </div>
                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
                <script>
-                  var ctx = document.getElementById("chartHTMLReportGenerator8").getContext("2d");
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
                   var data ={
            "labels":[
              "09:00 PM",
@@ -816,7 +601,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "78",
                  "81"
                ]
