--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 06:05:02 2018</p>
+         Last Run: Wed Nov 28 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WSW</td>
-                        <td>20</td>
+                        <td>W</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "83",
-                 "86"
+                 "87"
                ]
              },
              {
@@ -182,7 +182,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
+                 "18",
                  "12",
                  "13"
                ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 06:05:02 2018</p>
+         Last Run: Wed Nov 28 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 06:05:02 2018</p>
+         Last Run: Wed Nov 28 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -472,13 +472,13 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-5</td>
-                        <td>-8</td>
-                        <td>24</td>
-                        <td>81</td>
+                        <td>-9</td>
+                        <td>34</td>
+                        <td>82</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>NNE</td>
                         <td>90</td>
                      </tr>
@@ -520,7 +520,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-9",
-                 "-8",
+                 "-9",
                  "-9"
                ]
              },
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "24",
+                 "34",
                  "24"
                ]
              },
@@ -602,7 +602,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "84",
-                 "81",
+                 "82",
                  "77"
                ]
              },
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 06:05:02 2018</p>
+         Last Run: Wed Nov 28 07:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -679,7 +679,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>15</td>
-                        <td>83</td>
+                        <td>84</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WNW</td>
@@ -691,9 +691,9 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>15</td>
-                        <td>82</td>
+                        <td>83</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>39</td>
                      </tr>
@@ -705,7 +705,7 @@
                         <td>16</td>
                         <td>85</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>37</td>
                      </tr>
@@ -816,8 +816,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "84",
                  "83",
-                 "82",
                  "85"
                ]
              },
