--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 07:05:03 2018</p>
+         Last Run: Wed Nov 28 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -34,11 +34,11 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>5</td>
-                        <td>79</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>18</td>
+                        <td>WSW</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -49,8 +49,8 @@
                         <td>83</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
-                        <td>12</td>
+                        <td>WSW</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>-5</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>87</td>
+                        <td>86</td>
                         <td>0</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "83",
-                 "87"
+                 "86"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "12",
+                 "19",
+                 "11",
                  "13"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 07:05:03 2018</p>
+         Last Run: Wed Nov 28 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -248,7 +248,7 @@
                         <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-8</td>
-                        <td>53</td>
+                        <td>50</td>
                         <td>86</td>
                         <td>0</td>
                         <td>10</td>
@@ -258,8 +258,8 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Snow Showers</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>44</td>
                         <td>82</td>
                         <td>0</td>
@@ -273,7 +273,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>44</td>
-                        <td>81</td>
+                        <td>82</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
@@ -305,7 +305,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-8",
-                 "-8",
+                 "-7",
                  "-7"
                ]
              },
@@ -317,7 +317,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "-4",
-                 "-4",
+                 "-3",
                  "-3"
                ]
              }
@@ -375,7 +375,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "53",
+                 "50",
                  "44",
                  "44"
                ]
@@ -388,7 +388,7 @@
                "data":[
                  "86",
                  "82",
-                 "81"
+                 "82"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 07:05:03 2018</p>
+         Last Run: Wed Nov 28 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -461,8 +461,8 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
-                        <td>-6</td>
-                        <td>-9</td>
+                        <td>-5</td>
+                        <td>-8</td>
                         <td>24</td>
                         <td>84</td>
                         <td>0</td>
@@ -472,13 +472,13 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-5</td>
-                        <td>-9</td>
-                        <td>34</td>
+                        <td>-8</td>
+                        <td>24</td>
                         <td>82</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>NNE</td>
                         <td>90</td>
                      </tr>
@@ -519,8 +519,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
-                 "-9",
+                 "-8",
+                 "-8",
                  "-9"
                ]
              },
@@ -531,7 +531,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-5",
                  "-5"
                ]
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "34",
+                 "24",
                  "24"
                ]
              },
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 07:05:03 2018</p>
+         Last Run: Wed Nov 28 08:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -693,7 +693,7 @@
                         <td>15</td>
                         <td>83</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>39</td>
                      </tr>
@@ -705,7 +705,7 @@
                         <td>16</td>
                         <td>85</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>37</td>
                      </tr>
